# SLM

./: .gitignore  README.md  dataloader.py  diffusion.py  index.html  main.py  makefile  pyproject.toml  requirement.txt  slm.py  slm.yaml  slm_enhancer.py  slm_probability.py  slm_promoter.py  slm_sudoku.py  slm_utils.py  synthetic_nns.py
configs/: config.yaml
configs/callbacks/: checkpoint_every_n_steps.yaml
configs/data/: FB.yaml  Mel.yaml  ag_news.yaml  lambada.yaml  lm1b-gpt2.yaml  lm1b-streaming.yaml  lm1b.yaml  openwebtext-split.yaml  openwebtext-streaming.yaml  openwebtext.yaml  promoter.yaml  ptb.yaml  scientific_papers_arxiv.yaml  scientific_papers_pubmed.yaml  sudoku.yaml  text8-crop.yaml  text8.yaml  uniref50.yaml  wikitext103.yaml  wikitext2.yaml
configs/model/: evodiff.yaml  fat-bfn.yaml  large-ar.yaml  large.yaml  lfat-bfn.yaml  micro.yaml  nano.yaml  pico.yaml  small-bfn.yaml
configs/noise/: loglinear.yaml
evodiff/: collaters.py  data.py  generate.py  plot.py  utils.py
models/: __init__.py  autoregressive.py  dimamba.py  dit.py  dit_bfn.py  dna_models.py  promoter_model.py
promoter_utils/: enhancer_dataset.py  promoter_dataset.py
