[project]
name = "SLM"
version = "0.1.0"
requires-python = "==3.9.17"
description = ""

dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "numba==0.60.0",
    "torch==2.1.0+cu118",
    "torchvision==0.16.0+cu118",
    "torchaudio==2.1.0+cu118",
    "lightning==2.5.0.post0",
    "torchmetrics",
    "tensorboard==2.16.2",
    "transformers==4.38.2",
    "datasets==3.2.0",
    "tokenizers==0.15.2",
    "huggingface-hub==0.27.1",
    "einops==0.8.0",
    "timm==1.0.13",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "wandb",
    "fsspec==2024.9.0",
    "sequence-models>=1.8.0",
    "fair-esm>=2.0.0",
    "setuptools==67.8.0",
    "torchdiffeq>=0.2.5",
    "rich>=13.9.4",
    "biopython==1.85",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "pybigwig>=0.3.24",
    "pytabix>=0.1",
    "selene-sdk>=0.6.0",
    "cooltools>=0.7.1",
    "pyranges>=0.1.4",
]

[project.optional-dependencies]
cuda = [
    "triton==2.1.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.3/flash_attn-2.7.3%2Bcu11torch2.1cxx11abiFALSE-cp39-cp39-linux_x86_64.whl",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.5.0.post8/causal_conv1d-1.5.0.post8%2Bcu11torch2.1cxx11abiFALSE-cp39-cp39-linux_x86_64.whl",
    "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.2.4/mamba_ssm-2.2.4%2Bcu11torch2.1cxx11abiFALSE-cp39-cp39-linux_x86_64.whl",
]

genomics = [
    "biopython==1.85",
    "bioframe==0.7.2",
    "cooler==0.10.3",
    "cooltools==0.7.1",
    "pyranges==0.1.4",
    "pybigwig==0.3.24",
    "pyfaidx==0.8.1.3",
    "pytabix==0.1",
    "selene-sdk==0.6.0",
]

viz = [
    "matplotlib==3.9.4",
    "seaborn==0.13.2",
    "plotly==6.0.1",
    "statsmodels==0.14.4",
]

dev = [
    "rich==13.9.4",
    "ipython",
    "jupyterlab",
]

[tool.uv]
extra-index-url = [
    "https://download.pytorch.org/whl/cu118"
]
no-build-package = ["flash-attn", "causal-conv1d", "mamba-ssm"]
index-strategy = "unsafe-best-match"
