[project]
name = "SLM"
version = "0.1.0"
requires-python = ">=3.12"
description = ""

dependencies = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
    "lightning>=2.5",
    "numpy>=1.26.4,<2.0",
    "scipy>=1.13.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "numba>=0.60.0,<0.62",
    "torchmetrics>=1.0,<2.0",
    "transformers>=4.40,<4.48.0",
    "tokenizers>=0.21",
    "datasets>=3.2.0",
    "huggingface-hub>=0.29",
    "timm>=1.0.13",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "antlr4-python3-runtime==4.9.3",
    "sequence-models>=1.8.0",
    "fair-esm>=2.0.0",
    "setuptools==81.0.0",
    "fsspec",
    "tensorboard",
    "einops",
    "wandb",
    "torchdiffeq>=0.2.5",
    "rich>=13.9.4",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "flash-attn-triton>=0.1.1",
    "selene-sdk>=0.6.0",
]

[project.optional-dependencies]
cuda = [
    # "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.3/flash_attn-2.7.3%2Bcu11torch2.1cxx11abiFALSE-cp39-cp39-linux_x86_64.whl",
    # "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.5.0.post8/causal_conv1d-1.5.0.post8%2Bcu11torch2.1cxx11abiFALSE-cp39-cp39-linux_x86_64.whl",
    "causal-conv1d @ https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.5.0.post8/causal_conv1d-1.5.0.post8+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
    # "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.2.4/mamba_ssm-2.2.4%2Bcu11torch2.1cxx11abiFALSE-cp39-cp39-linux_x86_64.whl",
    "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.2.3.post2/mamba_ssm-2.2.3.post2+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl",
]

genomics = [
    "biopython==1.85",
    "bioframe==0.7.2",
    "cooler==0.10.3",
    "cooltools>=0.7.1",
    "pyranges>=0.1.4",
    "pybigwig>=0.3.24",
    "pyfaidx==0.8.1.3",
    "pytabix>=0.1",
    # "selene-sdk>=0.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
torchaudio = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]
no-build-package = ["flash-attn", "causal-conv1d", "mamba-ssm"]
# index-strategy = "unsafe-best-match"
override-dependencies = [
    "torch==2.6.0+cu124",
]
